@@ -28,10 +28,8 @@ CITATION
 Please make sure to cite the following paper if you use LHAPDF6:
 
   "LHAPDF6: parton density access in the LHC precision era"
+  Eur.Phys.J. C75 (2015) 3, 132
   http://arxiv.org/abs/1412.7420
-  http://inspirehep.net/search?p=find+eprint+1412.7420
-  accepted by Eur.Phys.J.C, Feb 2015
-
 
 An earlier write-up of progress on LHAPDF6 appeared in the Les Houches workshop proceedings:
 
